--- a/task/task1/task001/index.html
+++ b/task/task1/task001/index.html
@@ -73,9 +73,9 @@
 <p>下面是一个表格  这个表格我们加一个border="1"好让你看出来这是一个表格</p>
 <table border="1">
     <tr>
-        <th>表头</td>
-        <th>表头</td>
-        <th>表头</td>
+        <th>表头</th>
+        <th>表头</th>
+        <th>表头</th>
     </tr>
     <tr>
         <td>表格内容</td>
@@ -114,13 +114,14 @@
     <label for="pass-agin">请重复输入密码：</label>
     <input type="password" id="pass-agin" placeholder="这是一个文本输入框" min="6" max="16" required>
     <p>密码为6-16位英文数字</p>
-    <label>性别：</label><input type="radio" name="sex" checked>男<input type="radio" name="sex">女
+    性别：<input type="radio" name="sex" id="male" checked><label for="male">男</label><input type="radio" id="fmale" name="sex"><label for="fmale">女</label>
     <select name="adress" id="adress">
         <option>北京</option>
         <option>四川</option>
         <option>重庆</option>
     </select>
-    爱好：<input type="checkbox">运动 <input type="checkbox">艺术 <input type="checkbox">科学 个人描述：<textarea name="ms" id="ms" cols="30" rows="2" placeholder="请输入你的一些描述"></textarea><button type="submit">确认提交</button>
+    爱好：<input type="checkbox" id="yundong"><label for="yundong">运动</label> <input type="checkbox" id="yishu"><label
+        for="yishu">艺术</label> <input type="checkbox"id="kexue"><label for="kexue">科学</label> 个人描述：<textarea name="ms" id="ms" cols="30" rows="2" placeholder="请输入你的一些描述"></textarea><button type="submit">确认提交</button>
     <br>
     <p>版权所有&copy</p>
 </form>
