--- a/task/task1/task001/index.html
+++ b/task/task1/task001/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>task001</title>
 </head>
-<body style="font-family:微软雅黑">
+<body style="font-family:微软雅黑 sans-serif">
 <h1>网站一级标题</h1>
 <nav>
     <ul>
@@ -36,8 +36,8 @@
     <li>列表项目一</li>
     <li>列表项目二</li>
     <li>列表项目三</li>
-    <h2>图片</h2>
 </ul>
+<h2>图片</h2>
 <figure>
     <figcaption>这是一张带描述的图片</figcaption>
     <img src="http://placehold.it/350x200" alt="figure标签图片">
@@ -115,13 +115,14 @@
     <input type="password" id="pass-agin" placeholder="这是一个文本输入框" min="6" max="16" required>
     <p>密码为6-16位英文数字</p>
     性别：<input type="radio" name="sex" id="male" checked><label for="male">男</label><input type="radio" id="fmale" name="sex"><label for="fmale">女</label>
-    <select name="adress" id="adress">
-        <option>北京</option>
-        <option>四川</option>
-        <option>重庆</option>
-    </select>
+    <label for="chengshi">城市</label>
+            <select id="chengshi">
+                <option>北京</option>
+                <option>四川</option>
+                <option>重庆</option>
+            </select>
     爱好：<input type="checkbox" id="yundong"><label for="yundong">运动</label> <input type="checkbox" id="yishu"><label
-        for="yishu">艺术</label> <input type="checkbox"id="kexue"><label for="kexue">科学</label> 个人描述：<textarea name="ms" id="ms" cols="30" rows="2" placeholder="请输入你的一些描述"></textarea><button type="submit">确认提交</button>
+        for="yishu">艺术</label> <input type="checkbox" id="kexue"><label for="kexue">科学</label> 个人描述：<textarea name="ms" id="ms" cols="30" rows="2" placeholder="请输入你的一些描述"></textarea><button type="submit">确认提交</button>
     <br>
     <p>版权所有&copy</p>
 </form>
