--- a/task/task001/index.html
+++ b/task/task001/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>task001</title>
 </head>
-<body style="font-family:微软雅黑 sans-serif">
+<body>
 <h1>网站一级标题</h1>
 <nav>
     <ul>
@@ -14,24 +14,29 @@
         <li><a href="#">导航链接四</a></li>
     </ul>
 </nav>
+<article>
+    <h2>文章一级标题</h2>
+    <h3>文章二级标题</h3>
+    <p>文章作者 文章发表时间</p>
+    <p>这个段落有点长这个段落有点长这个段落有点长个点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长</p>
+    <p>这个段落 <br>这是一个换行     点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长</p>
+    <p>这个段落有点长这个段落有点长这个段 <a href="#">这只是一个链接</a>落有点长个 <b>粗体在这儿</b>点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长</p>
+    <img src="http://placehold.it/350x200" alt="图片">
+    <p>这个段落有点长这个段落有点长这个段落有点长个点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长</p>
+    <p>这个段落 <br>这是一个换行     点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长</p>
+    <p>这个段落有点长这个段落有点长这个段 <a href="#">这只是一个链接</a>落有点长个 <b>粗体在这儿</b>点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长</p>
 
-<h2>文章一级标题</h2>
-<h3>文章二级标题</h3>
-<p>文章作者 文章发表时间</p>
-<p>这个段落有点长这个段落有点长这个段落有点长个点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长</p>
-<p>这个段落 <br>这是一个换行     点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长</p>
-<p>这个段落有点长这个段落有点长这个段 <a href="#">这只是一个链接</a>落有点长个 <b>粗体在这儿</b>点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长</p>
-<img src="http://placehold.it/350x200" alt="图片">
-<p>这个段落有点长这个段落有点长这个段落有点长个点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长</p>
-<p>这个段落 <br>这是一个换行     点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长</p>
-<p>这个段落有点长这个段落有点长这个段 <a href="#">这只是一个链接</a>落有点长个 <b>粗体在这儿</b>点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长</p>
-<h2>又是一个文章一级标题</h2>
-<h3>文章二级标题</h3>
-<p>文章作者 文章发布时间</p>
-<p>这个段落有点长这个段落有点长这个段落有点长个点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长</p>
-<p>这个段落 <br>这是一个换行     点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长</p>
-<p>这个段落有点长这个段落有点长这个段 <a href="#">这只是一个链接</a>落有点长个 <b>粗体在这儿</b>点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长</p>
-<img src="http://placehold.it/350x200" alt="这是一张占位图">
+</article>
+<article>
+    <h2>又是一个文章一级标题</h2>
+    <h3>文章二级标题</h3>
+    <p>文章作者 文章发布时间</p>
+    <p>这个段落有点长这个段落有点长这个段落有点长个点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长</p>
+    <p>这个段落 <br>这是一个换行     点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长</p>
+    <p>这个段落有点长这个段落有点长这个段 <a href="#">这只是一个链接</a>落有点长个 <b>粗体在这儿</b>点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长</p>
+    <img src="http://placehold.it/350x200" alt="这是一张占位图">
+
+</article>
 <ul>
     <li>列表项目一</li>
     <li>列表项目二</li>
@@ -70,12 +75,15 @@
     <li>排名2</li>
     <li>排名3</li>
 </ol>
-<p>下面是一个表格  这个表格我们加一个border="1"好让你看出来这是一个表格</p>
+<p>下面这个是做表头还是不做表头呢？  这个表格我们加一个border="1"好让你看出来这是一个表格</p>
 <table border="1">
     <tr>
-        <th>表头</th>
-        <th>表头</th>
-        <th>表头</th>
+        <!--<th>表头</th>-->
+        <!--<th>表头</th>-->
+        <!--<th>表头</th>-->
+        <td>表头</td>
+        <td>表头</td>
+        <td>表头</td>
     </tr>
     <tr>
         <td>表格内容</td>
