--- a/task/task001/index.html
+++ b/task/task001/index.html
@@ -35,82 +35,85 @@
     <p>这个段落 <br>这是一个换行     点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长</p>
     <p>这个段落有点长这个段落有点长这个段 <a href="#">这只是一个链接</a>落有点长个 <b>粗体在这儿</b>点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长这个段落有点长</p>
     <img src="http://placehold.it/350x200" alt="这是一张占位图">
-
+    <ul>
+        <li>列表项目一</li>
+        <li>列表项目二</li>
+        <li>列表项目三</li>
+    </ul>
+    <h2>图片</h2>
+    <figure>
+        <figcaption>这是一张带描述的图片</figcaption>
+        <img src="http://placehold.it/350x200" alt="figure标签图片">
+    </figure>
+    <figure>
+        <figcaption>这是一张带描述的图片</figcaption>
+        <img src="http://placehold.it/350x200" alt="figure标签图片">
+    </figure>
+    <figure>
+        <figcaption>这是一张带描述的图片</figcaption>
+        <img src="http://placehold.it/350x200" alt="这是一张figure标签图片">
+    </figure>
+    <figure>
+        <figcaption>这是一张带描述的图片</figcaption>
+        <img src="http://placehold.it/350x200" alt="figure标签图片">
+    </figure>
+    <figure>
+        <figcaption>这是一张带描述的图片</figcaption>
+        <img src="http://placehold.it/350x200" alt="figure标签图片">
+    </figure>
+    <figure>
+        <figcaption>这是一张带描述的图片</figcaption>
+        <img src="http://placehold.it/350x200" alt="这是一张figure标签图片">
+    </figure>
 </article>
-<ul>
-    <li>列表项目一</li>
-    <li>列表项目二</li>
-    <li>列表项目三</li>
-</ul>
-<h2>图片</h2>
-<figure>
-    <figcaption>这是一张带描述的图片</figcaption>
-    <img src="http://placehold.it/350x200" alt="figure标签图片">
-</figure>
-<figure>
-    <figcaption>这是一张带描述的图片</figcaption>
-    <img src="http://placehold.it/350x200" alt="figure标签图片">
-</figure>
-<figure>
-    <figcaption>这是一张带描述的图片</figcaption>
-    <img src="http://placehold.it/350x200" alt="这是一张figure标签图片">
-</figure>
-<figure>
-    <figcaption>这是一张带描述的图片</figcaption>
-    <img src="http://placehold.it/350x200" alt="figure标签图片">
-</figure>
-<figure>
-    <figcaption>这是一张带描述的图片</figcaption>
-    <img src="http://placehold.it/350x200" alt="figure标签图片">
-</figure>
-<figure>
-    <figcaption>这是一张带描述的图片</figcaption>
-    <img src="http://placehold.it/350x200" alt="这是一张figure标签图片">
-</figure>
-<h2>最后的文章一级标题</h2>
-<h3>文章二级标题</h3>
-<p>文章作者 发表时间</p>
-<ol>
-    <li>排名1</li>
-    <li>排名2</li>
-    <li>排名3</li>
-</ol>
-<p>下面这个是做表头还是不做表头呢？  这个表格我们加一个border="1"好让你看出来这是一个表格</p>
-<table border="1">
-    <tr>
-        <!--<th>表头</th>-->
-        <!--<th>表头</th>-->
-        <!--<th>表头</th>-->
-        <td>表头</td>
-        <td>表头</td>
-        <td>表头</td>
-    </tr>
-    <tr>
-        <td>表格内容</td>
-        <td>表格内容</td>
-        <td><a href="#">操作</a></td>
-    </tr>
-    <tr>
-        <td>表格内容</td>
-        <td>表格内容</td>
-        <td><a href="#">操作</a></td>
-    </tr>
-    <tr>
-        <td>表格内容</td>
-        <td>表格内容</td>
-        <td><a href="#">操作</a></td>
-    </tr>
-    <tr>
-        <td>表格内容</td>
-        <td>表格内容</td>
-        <td><a href="#">操作</a></td>
-    </tr>
 
-    <tr>
-        <td>总计</td>
-        <td colspan="2">1000</td>
-    </tr>
-</table>
+<article>
+    <h2>最后的文章一级标题</h2>
+    <h3>文章二级标题</h3>
+    <p>文章作者 发表时间</p>
+    <ol>
+        <li>排名1</li>
+        <li>排名2</li>
+        <li>排名3</li>
+    </ol>
+    <p>下面这个是做表头还是不做表头呢？  这个表格我们加一个border="1"好让你看出来这是一个表格</p>
+    <table border="1">
+        <tr>
+            <!--<th>表头</th>-->
+            <!--<th>表头</th>-->
+            <!--<th>表头</th>-->
+            <td>表头</td>
+            <td>表头</td>
+            <td>表头</td>
+        </tr>
+        <tr>
+            <td>表格内容</td>
+            <td>表格内容</td>
+            <td><a href="#">操作</a></td>
+        </tr>
+        <tr>
+            <td>表格内容</td>
+            <td>表格内容</td>
+            <td><a href="#">操作</a></td>
+        </tr>
+        <tr>
+            <td>表格内容</td>
+            <td>表格内容</td>
+            <td><a href="#">操作</a></td>
+        </tr>
+        <tr>
+            <td>表格内容</td>
+            <td>表格内容</td>
+            <td><a href="#">操作</a></td>
+        </tr>
+
+        <tr>
+            <td>总计</td>
+            <td colspan="2">1000</td>
+        </tr>
+    </table>
+</article>
+
 <h2>以后是一个侧栏，这是侧栏的标题</h2>
 <h2>侧栏注册窗口标题</h2>
 <form>
