--- a/task/task001/index.html
+++ b/task/task001/index.html
@@ -134,9 +134,11 @@
             </select>
     爱好：<input type="checkbox" id="yundong"><label for="yundong">运动</label> <input type="checkbox" id="yishu"><label
         for="yishu">艺术</label> <input type="checkbox" id="kexue"><label for="kexue">科学</label> 个人描述：<textarea name="ms" id="ms" cols="30" rows="2" placeholder="请输入你的一些描述"></textarea><button type="submit">确认提交</button>
-    <br>
-    <p>版权所有&copy</p>
-</form>
 
+</form>
+<footer>
+
+</footer>
+<p>版权所有&copy</p>
 </body>
 </html>
