--- a/task/index.html
+++ b/task/index.html
@@ -8,14 +8,14 @@
 <ol>
     <li><a href="task101/index.html">任务1-1</a></li>
     <li><a href="task108/index.html">任务1-8</a></li>
-    <li><a href="#">任务</a></li>
-    <li><a href="#">任务</a></li>
-    <li><a href="#">任务</a></li>
-    <li><a href="#">任务</a></li>
-    <li><a href="#">任务</a></li>
-    <li><a href="#">任务</a></li>
-    <li><a href="#">任务</a></li>
-    <li><a href="#">任务</a></li>
+    <!--<li><a href="#">任务</a></li>-->
+    <!--<li><a href="#">任务</a></li>-->
+    <!--<li><a href="#">任务</a></li>-->
+    <!--<li><a href="#">任务</a></li>-->
+    <!--<li><a href="#">任务</a></li>-->
+    <!--<li><a href="#">任务</a></li>-->
+    <!--<li><a href="#">任务</a></li>-->
+    <!--<li><a href="#">任务</a></li>-->
 </ol>
 </body>
 </html>
