--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <ol>
-    <li><a href="task101/index.html">任务1-1</a></li>
-    <li><a href="task108/index.html">任务1-8</a></li>
+    <li><a href="task/task101/index.html">任务1-1</a></li>
+    <li><a href="task/task108/index.html">任务1-8</a></li>
     <!--<li><a href="#">任务</a></li>-->
     <!--<li><a href="#">任务</a></li>-->
     <!--<li><a href="#">任务</a></li>-->
