--- a/index.html
+++ b/index.html
@@ -3,19 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>task</title>
+    <style>
+        a:visited,a:link{
+            text-decoration: none;
+        }
+        div{
+            display: block;
+            width: 700px;
+            height:auto;
+            outline: 1px solid #cccccc;
+            margin: 20px auto;
+            padding: 10px;
+        }
+        li {
+            margin: 5px;
+
+        }
+        li a{
+            color: #30303a;;
+        }
+    </style>
 </head>
 <body>
-<ol>
-    <li><a href="task/task101/index.html">任务1-1</a></li>
-    <li><a href="task/task108/index.html">任务1-8</a></li>
-    <!--<li><a href="#">任务</a></li>-->
-    <!--<li><a href="#">任务</a></li>-->
-    <!--<li><a href="#">任务</a></li>-->
-    <!--<li><a href="#">任务</a></li>-->
-    <!--<li><a href="#">任务</a></li>-->
-    <!--<li><a href="#">任务</a></li>-->
-    <!--<li><a href="#">任务</a></li>-->
-    <!--<li><a href="#">任务</a></li>-->
-</ol>
+<div>
+    <ol>
+        <li><a href="task/task001/index.html">任务1-1</a></li>
+        <li><a href="task/task003/index.html">任务1-3</a></li>
+        <li><a href="task/task006/index.html">任务1-6</a></li>
+        <li><a href="task/task007/index.html">任务1-7</a></li>
+        <li><a href="task/task008/index.html">任务1-8</a></li>
+        <li><a href="task/task010/index.html">任务1-10</a></li>
+        <li><a href="task/task013/index.html">任务2-13</a></li>
+        <li><a href="task/task014/index.html">任务2-14</a></li>
+        <li><a href="task/task015/index.html">任务2-15</a></li>
+
+    </ol>
+</div>
 </body>
 </html>
