--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <li><a href="task/task013/index.html">任务2-13</a></li>
         <li><a href="task/task014/index.html">任务2-14</a></li>
         <li><a href="task/task015/index.html">任务2-15</a></li>
+        <li><a href="task/task016/index.html">任务2-16</a></li>
 
     </ol>
 </div>
