--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <li><a href="task/task015/index.html">任务2-15</a></li>
         <li><a href="task/task016/index.html">任务2-16</a></li>
         <li><a href="task/task017/index.html">任务2-17</a></li>
+        <li><a href="task/task018/index.html">任务2-18</a></li>
 
     </ol>
 </div>
