--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <li><a href="task/task017/index.html">任务2-17</a></li>
         <li><a href="task/task018/index.html">任务2-18</a></li>
         <li><a href="task/task019/index.html">任务2-19</a></li>
+        <li><a href="task/task020/index.html">任务2-20</a></li>
 
     </ol>
 </div>
