--- a/task/task007/index.html
+++ b/task/task007/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="all">
-    <div class="top">
+    <div class="top" id="top">
         <div class="top-left"><span class="logo"></span>新世界</div>
         <div class="top-right">
             <nav>
@@ -111,7 +111,7 @@
 
         </div>
     </div>
-    </div>
+
     <div class="activity">
         <figure>
             <img src="images/ac1.gif" alt="ac1">
@@ -236,7 +236,7 @@
         </div>
         <div class="div2">
             <span>@2016新世界</span>
-            <span>Back to top</span>
+            <span><a href="#top">Back to top</a></span>
         </div>
 
     </footer>
