--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <li><a href="task/task018/index.html">任务2-18</a></li>
         <li><a href="task/task019/index.html">任务2-19</a></li>
         <li><a href="task/task020/index.html">任务2-20</a></li>
+        <li><a href="task/task022/index.html">任务2-22</a></li>
 
     </ol>
 </div>
