--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         <li><a href="task/task019/index.html">任务2-19</a></li>
         <li><a href="task/task020/index.html">任务2-20</a></li>
         <li><a href="task/task022/index.html">任务2-22</a></li>
+        <li><a href="task/task023/index.html">任务2-23</a></li>
+        <li><a href="task/task024/index.html">任务2-24</a></li>
 
     </ol>
 </div>
