--- a/task/task025/index.html
+++ b/task/task025/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>task024</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 </head>
 <body>
+<div id="search">
+    <input type="text">
+    <button>搜索</button>
+</div>
 <div id="wrap">
-
 </div>
 <script src="task.js"></script>
 </body>
