--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <li><a href="task/task022/index.html">任务2-22</a></li>
         <li><a href="task/task023/index.html">任务2-23</a></li>
         <li><a href="task/task024/index.html">任务2-24</a></li>
+        <li><a href="task/task025/index.html">任务2-25</a></li>
 
     </ol>
 </div>
