--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <li><a href="task/task025/index.html">任务2-25</a></li>
         <li><a href="task/task037/index.html">任务2-37</a></li>
         <li><a href="task/task038/index.html">任务2-38</a></li>
+        <li><a href="task/task039/index.html">任务2-39</a></li>
 
     </ol>
 </div>
