--- a/task/task050/index.html
+++ b/task/task050/index.html
@@ -13,9 +13,9 @@
 <body>
 <div class="all">
     <nav class="header">
-        <div class="logo"><a href="#" class="fa fa-question-circle">调查问卷</a></div>
+        <div class="logo"><a href="index.html" class="fa fa-question-circle">调查问卷</a></div>
         <div class="nav"><ul>
-            <li><a href="#">我的问卷</a></li>
+            <li><a href="index.html">我的问卷</a></li>
         </ul></div>
     </nav>
     <div class="contenair">
