--- a/task/task050/new.html
+++ b/task/task050/new.html
@@ -48,10 +48,10 @@
         </div>
         <div id="new-date">
             <div id="date-ipt">
-                <label for="date">问卷截止日期：<input type="datetime" id="date"></label>
+                <label for="date">问卷截止日期：<input type="text" id="date"></label>
                 <div id="getdate">
                     <div id="date-top">
-                        <div><span class="fa fa-angle-left"></span><span>四月</span><span>2016</span><span class="fa fa-angle-right"></span></div>
+                        <div><span class="fa fa-angle-left" id="left"></span><span id="month">四月</span><span id="year">2016</span><span class="fa fa-angle-right" id="right"></span></div>
                         <div>
                             <span>Mon</span>
                             <span>tue</span>
@@ -63,48 +63,48 @@
                         </div>
                     </div>
                     <div id="date-content">
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
-                        <span>22</span>
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
+                        <!--<span>22</span>-->
                     </div>
                 </div>
             </div>
@@ -115,5 +115,7 @@
         </div>
     </div>
 </div>
+<script src="js/data.js"></script>
+<script src="js/calendar.js"></script>
 </body>
 </html>
