--- a/task/task050/new.html
+++ b/task/task050/new.html
@@ -24,7 +24,7 @@
             <label for="title"><input id="title" type="text" value="这是一个标题"></label>
         </div>
         <div id="question">
-            <div class="question">
+            <div class="question1">
                 <header><span>Q1</span><span><label for="q1"><input type="text" id="q1" value="这是一个问题"></label></span></header>
                 <section id="q1-content">
                     <ul>
@@ -36,7 +36,7 @@
                     <div><span class="to-top">上移</span><span class="to-bottom">下移</span><span class="to-copy">复用</span><span class="to-del">删除</span></div>
                 </section>
             </div>
-            <div class="question">
+            <div class="question2">
                 <header><span>Q2</span><span><label for="q2"><input type="text" id="q2" value="这是一个问题"></label></span></header>
                 <section id="q2-content">
                     <ul>
@@ -48,7 +48,7 @@
                     <div><span class="to-top">上移</span><span class="to-bottom">下移</span><span class="to-copy">复用</span><span class="to-del">删除</span></div>
                 </section>
             </div>
-            <div class="question">
+            <div class="question3">
                 <header><span>Q3</span><span><label for="q3"><input type="text" id="q3" value="这是一个问题"></label></span><span><label
                         for="requir"><input type="checkbox" id="requir">是否必答</label></span></header>
                 <section id="q3-content">
@@ -61,9 +61,9 @@
         </div>
         <div id="new-question">
             <div id="questionclass">
-                <span class="fa fa-circle-o">单选题</span>
-                <span class="fa fa-check-square">多选题</span>
-                <span class="fa fa-file-text">文本题</span>
+                <span class="fa fa-circle-o" id="radius">单选题</span>
+                <span class="fa fa-check-square" id="checkbox">多选题</span>
+                <span class="fa fa-file-text" id="text">文本题</span>
             </div>
             <div id="addquestion">
                 <span>+</span>添加问题
