--- a/task/task050/new.html
+++ b/task/task050/new.html
@@ -131,7 +131,7 @@
                     </div>
                 </div>
             </div>
-            <div id="date-btn">
+            <div id="question-btn">
                 <button>保存问卷</button>
                 <button>发表问卷</button>
             </div>
