--- a/task/task050/view.html
+++ b/task/task050/view.html
@@ -18,7 +18,7 @@
     </nav>
     <div class="contenair">
         <div class="contenair-header">
-            <span id="return" class="fa fa-arrow-left">返回</span>
+            <span id="return" class="fa fa-arrow-left"><a href="index.html">返回</a></span>
             <div>
                 <span id="title"><h3>这里是标题</h3></span>
                 <span>此统计只包含完整回收数据</span>
