--- a/task/task050/index.html
+++ b/task/task050/index.html
@@ -20,8 +20,8 @@
     </nav>
     <div class="contenair">
        <div id="newtable">
-           <button>
-              <a href="new.html"> <span class="fa fa-plus">新建问卷</span></a>
+           <button class="n">
+              <a href="new.html"> <span class="fa fa-plus ">新建问卷</span></a>
            </button>
        </div>
         <div id="table">
@@ -30,7 +30,7 @@
               <div class="time">时间</div>
               <div class="stat">状态</div>
               <div class="do">操作</div>
-              <div class="new"><a href="new.html"><span>+ 新建</span></a></div>
+              <div class="new"><a href="new.html"><span class="n">+ 新建</span></a></div>
           </div>
             <div id="content">
                 <div>
