--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <li><a href="task/task038/index.html">任务2-38</a></li>
         <li><a href="task/task039/index.html">任务2-39</a></li>
         <li><a href="task/task050/index.html">任务2-50</a></li>
+        <li><a href="other/相册/index.html">瀑布流相册</a></li>
 
 
     </ol>
